--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,3 +5,4 @@ twig:
 
     paths:
         '%kernel.project_dir%/templates/page' : page
+        '%kernel.project_dir%/templates/comment' : comment
