add edit list delete TERM

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -6,3 +6,4 @@ twig:
     paths:
         '%kernel.project_dir%/templates/page' : page
         '%kernel.project_dir%/templates/comment' : comment
+        '%kernel.project_dir%/templates/term' : term
